force-app/main/default/objects/ScoutingReport__c/ScoutingReport__c.object-meta.xml
<CustomObject>
    <description>Rapport de scouting sur un prospect.</description>
    <label>Scouting Report</label>
    <nameField>
        <label>Scouting Report Name</label>
        <type>AutoNumber</type>
        <displayFormat>SR-{00000}</displayFormat>
    </nameField>
    <pluralLabel>Scouting Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>