force-app/main/default/objects/ScoutingReport__c/fields/AutoInsights__c.field-meta.xml
<CustomField>
    <fullName>AutoInsights__c</fullName>
    <description>Automated insights generated from scouting stage inputs.</description>
    <label>Auto Insights</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>