force-app/main/default/objects/ScoutingReport__c/fields/ComparisonNotes__c.field-meta.xml
<CustomField>
    <fullName>ComparisonNotes__c</fullName>
    <description>Comparison notes from data checks.</description>
    <label>Comparison Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>