force-app/main/default/objects/ScoutingReport__c/fields/MatchSelection__c.field-meta.xml
<CustomField>
    <fullName>MatchSelection__c</fullName>
    <description>Match list selected by scout for this step.</description>
    <label>Match Selection</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>