force-app/main/default/objects/ScoutingReport__c/fields/ReferenceContacts__c.field-meta.xml
<CustomField>
    <fullName>ReferenceContacts__c</fullName>
    <description>People met during reference checks.</description>
    <label>Reference Contacts</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>