force-app/main/default/objects/ScoutingReport__c/fields/SocialNetworks__c.field-meta.xml
<CustomField>
    <fullName>SocialNetworks__c</fullName>
    <description>Social network and web links captured during background checks.</description>
    <label>Social Networks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>