force-app/main/default/objects/ScoutingReport__c/fields/StepType__c.field-meta.xml
<CustomField>
    <fullName>StepType__c</fullName>
    <description>Scouting pipeline step type.</description>
    <label>Step Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Video Scouting</fullName>
            </value>
            <value>
                <fullName>Live Scouting</fullName>
            </value>
            <value>
                <fullName>Data Check</fullName>
            </value>
            <value>
                <fullName>Reference Check</fullName>
            </value>
            <value>
                <fullName>Background Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>